--- a/result.html
+++ b/result.html
@@ -21,6 +21,19 @@
         .sidebar h3 { font-size: 28px; margin-bottom: 20px; }
         .sidebar ul { list-style-type: none; padding: 0; }
         .sidebar ul li a { color: white; text-decoration: none; display: block; padding: 10px 0; }
+        .logout-btn {
+            background-color: #f28b82;
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            text-align: left;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+        .logout-btn:hover {
+            background-color: #f28b82;
+        }
         .main-content { flex: 1; padding: 20px; }
         form { background-color: white; border: 1px solid #ccc; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
         form label { display: block; margin-top: 10px; font-weight: bold; color: #34495e; position: relative; }
