--- a/result.html
+++ b/result.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body { font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; margin: 0; padding: 0; display: flex; flex-direction: column; }
-        .top-bar { background-color: #2c3e50; color: white; padding: 10px 20px; display: flex; justify-content: center; align-items: center; padding: 20px;
-            position: fixed;
-            overflow-x: auto;}
+        .top-bar { background-color: #2c3e50; color: white; padding: 10px 20px; justify-content: center; align-items: center; position: fixed;}
         .auth-buttons {position: absolute; right: 20px; gap: 70px;}
         .auth-buttons button { background-color: #3498db; color: white; border: none; padding: 5px 10px; cursor: pointer; border-radius: 4px; }
         .container { display: flex; flex: 1; }
@@ -34,7 +32,7 @@
         .logout-btn:hover {
             background-color: #f28b82;
         }
-        .main-content { flex: 1; padding: 20px; }
+        .main-content { flex: 1; 140px 20px 20px 240px; }
         form { background-color: white; border: 1px solid #ccc; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
         form label { display: block; margin-top: 10px; font-weight: bold; color: #34495e; position: relative; }
         form label .required-asterisk { color: red; position: absolute; top: 0; }
