--- a/request.html
+++ b/request.html
@@ -16,20 +16,20 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-        }
+            overflow-x: hidden        }
         .top-bar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-            height: 60px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    height: 60px;
         }
         .top-bar h1 {
             margin: 0;
@@ -40,22 +40,18 @@
         .auth-buttons button:first-child {
             margin-left: 200px;
         }
-
-        .container {
-            display: flex;
-            flex: 1;
-            padding-top: 100px; /* Adjust this value based on your top bar height */
-        }
         .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px;
-            height: calc(100vh - 100px); /* Subtract top bar height */
-            box-sizing: border-box;
-            position: fixed;
-            overflow-y: auto;
-        }
+    width: 250px;
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    box-sizing: border-box;
+    position: fixed;
+    top: 100px; /* Sesuaikan dengan tinggi top-bar */
+    left: 0;
+    bottom: 0;
+    overflow-y: auto;
+}
         .sidebar h3 {
             color: white;
             font-size: 28px;
@@ -87,11 +83,17 @@
         .logout-btn:hover {
             background-color: #f28b82;
         }
-        .main-content {
-            flex: 1;
-            padding: 20px;
-            margin-left: 250px; /* Match sidebar width */
-        }
+        .container {
+    display: flex;
+    flex: 1;
+    padding-top: 100px; /* Sesuaikan dengan tinggi top-bar */
+    margin-left: 250px; /* Sesuaikan dengan lebar sidebar */
+}
+
+.main-content {
+    flex: 1;
+    padding: 20px;
+}
         h2 {
             color: #34495e;
         }
