--- a/karyawan.html
+++ b/karyawan.html
@@ -57,7 +57,6 @@
 .container {
     display: flex;
     flex: 1;
-    padding-top: 100px; /* Adjust this value based on your top bar height */
 }
 
 .sidebar {
@@ -67,7 +66,7 @@
     padding: 20px;
     box-sizing: border-box;
     position: fixed;
-    top: 100px; /* Adjust based on top-bar height */
+    top: 100px;
     left: 0;
     bottom: 0;
     overflow-y: auto;
@@ -84,6 +83,7 @@
 .sidebar ul {
     list-style-type: none;
     padding: 0;
+    margin-bottom: 20px;
     flex-grow: 1;
 }
 
@@ -107,6 +107,7 @@
     text-align: left;
     cursor: pointer;
     margin-top: auto;
+    margin-bottom: 20px;
 }
 
 .logout-btn:hover {
@@ -116,7 +117,8 @@
 .main-content {
     flex: 1;
     padding: 20px;
-    margin-left: 250px; /* Match sidebar width */
+    margin-left: 250px;
+    margin-top: 100px;
 }
 
 h2 {
@@ -277,7 +279,6 @@ tr:hover {
     .container {
         flex-direction: column;
         margin-left: 0;
-        padding-top: 60px; /* Adjust based on top-bar height */
     }
     
     .sidebar {
@@ -290,6 +291,7 @@ tr:hover {
     .main-content {
         margin-left: 0;
         padding: 10px;
+        margin-top: 20px;
     }
     
     .top-bar {
