--- a/karyawan.html
+++ b/karyawan.html
@@ -210,6 +210,210 @@ tr:hover {
     background-color: #2ecc71;
 }
 
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f0f2f5;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    overflow-x: hidden;
+}
+
+.top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    height: 60px;
+}
+
+.top-bar h1 {
+    margin: 0;
+    font-size: 32px;
+}
+
+.auth-buttons {
+    position: absolute;
+    right: 10px;
+}
+
+.auth-buttons button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.auth-buttons button:first-child {
+    margin-left: 200px;
+}
+
+.container {
+    display: flex;
+    flex: 1;
+}
+
+.sidebar {
+    width: 250px;
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    box-sizing: border-box;
+    position: fixed;
+    top: 100px;
+    left: 0;
+    bottom: 0;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar h3 {
+    color: white;
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+    margin-bottom: 0; /* Menghapus margin bottom */
+}
+
+.sidebar ul li {
+    margin: 10px 0;
+}
+
+.sidebar ul li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px 0;
+}
+
+.logout-btn {
+    background-color: transparent; /* Mengubah background menjadi transparan */
+    color: white;
+    border: none;
+    padding: 10px 0; /* Menyamakan padding dengan link navigasi */
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    margin-top: 10px; /* Memberikan jarak yang sama dengan antar navigasi */
+    font-size: 16px; /* Menyamakan ukuran font dengan link navigasi */
+}
+
+.logout-btn:hover {
+    background-color: rgba(255, 255, 255, 0.1); /* Efek hover yang subtle */
+}
+
+.main-content {
+    flex: 1;
+    padding: 20px;
+    margin-left: 250px;
+    margin-top: 100px;
+}
+
+h2 {
+    color: #34495e;
+}
+
+form {
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    display: none;
+}
+
+form.show {
+    display: block;
+}
+
+form label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #34495e;
+}
+
+form input[type="text"], form select, form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+form input[type="submit"], .print-btn, #itemButton, #addButton, #addNewNameBtn {
+    background-color: #3498db;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+form input[type="submit"]:hover, .print-btn:hover, #addButton:hover, #addNewNameBtn:hover {
+    background-color: #2980b9;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+}
+
+th {
+    background-color: #3498db;
+    color: white;
+    cursor: pointer;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+.edit-btn, .delete-btn, .save-btn, .undo-btn {
+    margin-right: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    color: white;
+}
+
+.edit-btn {
+    background-color: #2ecc71;
+}
+
 .edit-btn:hover {
     background-color: #27ae60;
 }
