--- a/result.html
+++ b/result.html
@@ -44,16 +44,18 @@
             margin-top: 60px; /* Adjusted to account for fixed top bar */
         }
         .sidebar { 
-            width: 250px; 
-            background-color: #2c3e50; 
-            color: white; 
+            width: 250px;
+            background-color: #2c3e50;
+            color: white;
             padding: 20px;
-            height: calc(100vh - 60px); /* Subtract top bar height */
             box-sizing: border-box;
             position: fixed;
-            overflow-y: auto; 
-            display: flex; /* Tambahkan ini */
-    flex-direction: column; 
+            top: 60px;
+            left: 0;
+            bottom: 0;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
         }
         .sidebar h3 { 
             font-size: 28px; 
@@ -207,9 +209,9 @@
                 <li><a href="karyawan.html">Karyawan</a></li>
                 <li><a href="request.html">Request</a></li>
                 <li><a href="result.html">Result</a></li>
+                <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
             </ul>
-            <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
-        </div>
+             </div>
         <div class="main-content">
             <form id="resultForm">
                 <label for="nomor_result">Nomor Result</label>
