--- a/result.html
+++ b/result.html
@@ -20,7 +20,7 @@
             color: white; 
             padding: 10px 20px; 
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center; 
             position: fixed;
             width: 100%;
