--- a/result.html
+++ b/result.html
@@ -15,17 +15,24 @@
             display: flex; 
             flex-direction: column; 
         }
-        .top-bar { 
-            background-color: #2c3e50; 
-            color: white; 
-            padding: 10px 20px; 
+        .top-bar {
+        position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px 10px;
             display: flex;
             justify-content: center;
-            align-items: center; 
-            position: fixed;
-            width: 100%;
+            align-items: center;
             z-index: 1000;
-            box-sizing: border-box;
+            height: 60px;
+        }
+
+        .top-bar h1 {
+            margin: 0;
+            font-size: 32px;
         }
         .auth-buttons {
             display: flex;
