--- a/karyawan.html
+++ b/karyawan.html
@@ -121,25 +121,25 @@
         h2 {
             color: #34495e;
         }
+        form {
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    display: none;
+}
 
-        form { 
-            background-color: white; 
-            border: 1px solid #ccc; 
-            padding: 20px; 
-            border-radius: 8px; 
-            box-shadow: 0 0 10px rgba(0,0,0,0.1); 
-        }
-        form label { 
-            display: block; 
-            margin-top: 10px; 
-            font-weight: bold; 
-            color: #34495e; 
-            position: relative; 
+form.show {
+    display: block;
+}
 
-        form.show {
-            display: block;
-        }
-
+form label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #34495e;
+}
         form input[type="text"], form select, form textarea {
             width: 100%;
             padding: 10px;
