--- a/karyawan.html
+++ b/karyawan.html
@@ -199,3 +199,158 @@
                 department,
                 keperluan,
                 lamaPeminjaman
+                foto
+            };
+
+            employeeData.push(newEmployee);
+            updateTable();
+            localStorage.setItem('employeeData', JSON.stringify(employeeData));
+
+            alert('Data berhasil ditambahkan!');
+            resetForm();
+        }
+
+        function updateTable() {
+            const tableBody = document.getElementById('employeeTable').querySelector('tbody');
+            tableBody.innerHTML = '';
+
+            employeeData.forEach(employee => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${employee.id}</td>
+                    <td contenteditable="true" onblur="updateEmployee(${employee.id}, 'nama', this.innerText)">${employee.nama}</td>
+                    <td contenteditable="true" onblur="updateEmployee(${employee.id}, 'npk', this.innerText)">${employee.npk}</td>
+                    <td>${employee.kebutuhan}</td>
+                    <td contenteditable="true" onblur="updateEmployee(${employee.id}, 'item', this.innerText)">${employee.item}</td>
+                    <td contenteditable="true" onblur="updateEmployee(${employee.id}, 'department', this.innerText)">${employee.department}</td>
+                    <td contenteditable="true" onblur="updateEmployee(${employee.id}, 'keperluan', this.innerText)">${employee.keperluan}</td>
+                    <td>${employee.lamaPeminjaman}</td>
+                    <td><img src="${employee.foto}" alt="Foto Item" width="50"></td>
+                    <td>
+                        <button class="edit-btn" onclick="editEmployee(${employee.id})">Edit</button>
+                        <button class="delete-btn" onclick="deleteEmployee(${employee.id})">Delete</button>
+                    </td>
+                `;
+                tableBody.appendChild(row);
+            });
+        }
+
+        function updateEmployee(id, field, value) {
+            const employee = employeeData.find(emp => emp.id === id);
+            if (employee) {
+                employee[field] = value;
+                localStorage.setItem('employeeData', JSON.stringify(employeeData));
+                alert('Data berhasil diperbarui!');
+            }
+        }
+
+        function deleteEmployee(id) {
+            const index = employeeData.findIndex(emp => emp.id === id);
+            if (index !== -1) {
+                const deletedEmployee = employeeData.splice(index, 1)[0];
+                updateTable();
+                localStorage.setItem('employeeData', JSON.stringify(employeeData));
+                undoStack.push(deletedEmployee);
+
+                clearTimeout(undoTimeout);
+                undoTimeout = setTimeout(() => {
+                    undoStack = [];
+                }, 5000);
+
+                alert('Data berhasil dihapus. Anda memiliki 5 detik untuk mengembalikan.');
+                document.querySelector('.undo-btn').style.display = 'inline';
+            }
+        }
+
+        function undoDelete() {
+            if (undoStack.length > 0) {
+                const lastDeletedEmployee = undoStack.pop();
+                employeeData.push(lastDeletedEmployee);
+                updateTable();
+                localStorage.setItem('employeeData', JSON.stringify(employeeData));
+                alert('Penghapusan berhasil dibatalkan.');
+                document.querySelector('.undo-btn').style.display = 'none';
+            } else {
+                alert('Tidak ada yang bisa dibatalkan.');
+            }
+        }
+
+        function resetForm() {
+            document.getElementById('addEmployeeForm').reset();
+        }
+
+        function filterTable() {
+            const searchTerm = document.getElementById('searchInput').value.toLowerCase();
+            const tableRows = document.getElementById('employeeTable').querySelectorAll('tbody tr');
+
+            tableRows.forEach(row => {
+                const rowText = row.innerText.toLowerCase();
+                row.style.display = rowText.includes(searchTerm) ? '' : 'none';
+            });
+        }
+
+        function sortTable() {
+            const sortKey = document.getElementById('sortBar').value;
+            employeeData.sort((a, b) => {
+                if (a[sortKey] < b[sortKey]) return -1;
+                if (a[sortKey] > b[sortKey]) return 1;
+                return 0;
+            });
+            updateTable();
+        }
+
+        function printTable() {
+            const printWindow = window.open('', '_blank');
+            printWindow.document.write(`
+                <html>
+                <head>
+                    <title>Print Table</title>
+                    <style>
+                        table { width: 100%; border-collapse: collapse; }
+                        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+                        th { background-color: #3498db; color: white; }
+                        tr:nth-child(even) { background-color: #f2f2f2; }
+                        img { width: 50px; }
+                    </style>
+                </head>
+                <body>
+                    <h2>Data Karyawan</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nama</th>
+                                <th>NPK</th>
+                                <th>Kebutuhan</th>
+                                <th>Item</th>
+                                <th>Department</th>
+                                <th>Keperluan</th>
+                                <th>Lama Peminjaman</th>
+                                <th>Foto Item</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            ${employeeData.map(emp => `
+                                <tr>
+                                    <td>${emp.id}</td>
+                                    <td>${emp.nama}</td>
+                                    <td>${emp.npk}</td>
+                                    <td>${emp.kebutuhan}</td>
+                                    <td>${emp.item}</td>
+                                    <td>${emp.department}</td>
+                                    <td>${emp.keperluan}</td>
+                                    <td>${emp.lamaPeminjaman}</td>
+                                    <td><img src="${emp.foto}" alt="Foto Item"></td>
+                                </tr>
+                            `).join('')}
+                        </tbody>
+                    </table>
+                </body>
+                </html>
+            `);
+            printWindow.document.close();
+            printWindow.print();
+        }
+    </script>
+</body>
+</html>
