--- a/karyawan.html
+++ b/karyawan.html
@@ -28,8 +28,9 @@
         </div>
     </div>
     <div class="main-content">
-        <div id="employeeForm" class="form-container">
-            <br> <br>
+        <div id="employeeForm" class="form-container"><button id="showFormBtn">Tambah Data</button>
+<div id="formContainer" style="display: none;">
+  <!-- Pindahkan form Anda ke sini -->
             <form id="addEmployeeForm">
                 <label for="Nama">Nama <span style="color: red;">*</span></label>
                 <select id="Nama" required>
@@ -111,6 +112,7 @@
                 <span id="fotoError" style="color: red; display: none;">*bidang ini wajib diisi</span>
                 <input type="submit" value="Tambah Data">
             </form>
+</div>
         </div>
         <div class="button-group">
             <button id="addButton">Tambah Data</button>
@@ -304,7 +306,9 @@
                 row.style.display = rowText.includes(searchTerm) ? '' : 'none';
             });
         }
-
+document.getElementById('showFormBtn').addEventListener('click', function() {
+  document.getElementById('formContainer').style.display = 'block';
+});
         function sortTable() {
             const sortKey = document.getElementById('sortBar').value;
             employeeData.sort((a, b) => {
