--- a/karyawan.html
+++ b/karyawan.html
@@ -28,7 +28,8 @@
         </div>
     </div>
     <div class="main-content">
-        <div id="employeeForm" class="form-container"><button id="showFormBtn">Tambah Data</button>
+        <div id="employeeForm" class="form-container">
+            <button id="showFormBtn">Tambah Data</button>
 <div id="formContainer" style="display: none;">
   <!-- Pindahkan form Anda ke sini -->
             <form id="addEmployeeForm">
@@ -115,8 +116,6 @@
 </div>
         </div>
         <div class="button-group">
-            <button id="addButton">Tambah Data</button>
-            <button id="itemButton">Item</button>
             <button class="print-btn" onclick="printTable()">Cetak Tabel</button>
             <button class="undo-btn" onclick="undoDelete()">Undo</button>
             <input type="text" id="searchInput" placeholder="Cari...">
